--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/estilo.css">
+    <link rel="stylesheet" href="estilo.css">
     <title>Actividad Deportes</title>
 </head>
 <body>
     <div class="containerIndex">
         <h1>Actividad Deportes</h1>
         <h3>En esta actividad didactica vamos a reforzar los conocimientos generales que hemos adquirido en el area de deportes</h3>
-        <a href="../html/juego.html"><button class="botonI">Continuar</button></a>
+        <a href="juego.html"><button class="botonI">Continuar</button></a>
     </div>
 </body>
 </html>
