--- a/juego.html
+++ b/juego.html
@@ -9,7 +9,8 @@
 <body>
     <div class="containerT">
         <h1>Actividad de Snake con Preguntas</h1>
-        <h3>Responde las preguntas que aparezcan segun vayas avanzando</h3>
+        <h3>Para este ejercicio deberas responder las preguntas que aparezcan segun vayas llegando al punto azul moviendo el punto verde.<br>Mueve el punto verde con las flechas del teclado
+        </h3>
     </div>
 
     <canvas id="juego" width="400" height="400"></canvas>
@@ -23,7 +24,8 @@
     <div class="mensaje" id="mensaje"></div>
 
     <script>
-        cont= 0;
+        let cont= 0;
+        let fallo= 0;
         const canvas= document.getElementById("juego");
         const ctx= canvas.getContext("2d");
 
@@ -75,6 +77,7 @@
             if(cabeza.x < 0  || cabeza.y < 0 || cabeza.x >= 20 || cabeza.y >= 20){
                 clearInterval(intervalo);
                 setTimeout(() => {
+                    fallo= 1;
                     reiniciar();
                 }, 10);
             }
@@ -83,6 +86,7 @@
                 if(serpiente[i].x === cabeza.x && serpiente[i].y === cabeza.y){
                     clearInterval(intervalo);
                     setTimeout(() => {
+                        fallo= 2;
                         reiniciar();
                     }, 10);
                 } 
@@ -144,6 +148,7 @@
                         document.getElementById("containerPregunta").classList.add("oculto");
                         intervalo= setInterval(mover,300);
                     }else{
+                        fallo= 3;
                         reiniciar();
                     }
                 }
@@ -152,9 +157,16 @@
             document.getElementById("containerPregunta").classList.remove("oculto");
         }
         function reiniciar(){
-            alert("Has perdido, vuelve a intentarlo \nConseguiste "+cont+ " respuesta(s) correctas");
-            window.location.reload();
-
+            if(fallo==1){
+                alert("Has chocado, vuelve a intentarlo \nConseguiste "+cont+ " respuesta(s) correctas");
+                window.location.reload();
+            }else if(fallo==2){
+                alert("Has chocado con tu propio cuerpo, vuelve a intentarlo \nConseguiste "+cont+ " respuesta(s) correctas");
+                window.location.reload();
+            }else{
+                alert("Te has equivocado, vuelve a intentarlo \nConseguiste "+cont+ " respuesta(s) correctas");
+                window.location.reload();
+            }
         }
 
         intervalo= setInterval(mover,300); 
