--- a/juego.html
+++ b/juego.html
@@ -9,7 +9,7 @@
 <body>
     <div class="containerT">
         <h1>Actividad de Snake con Preguntas</h1>
-        <h3>Para este ejercicio deberas responder las preguntas que aparezcan segun vayas llegando al punto azul moviendo el punto verde.<br>Mueve el punto verde con las flechas del teclado
+        <h3>Para este ejercicio deberas mover el punto verde hasta el punto azul y responder las preguntas que aparezcan segun lo vayas logrando, responde la mayor cantidad de preguntas.<br>Mueve el punto verde con las flechas del teclado
         </h3>
     </div>
 
